change to overall width to fix overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,11 @@
+html { scroll-behavior: smooth; }
+
 body {
   margin: 0;
   color: #3a3a3a;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
-  overflow-x: hidden;
+  
 }
 
 header {
@@ -53,7 +55,7 @@ main {
 .bg-color-home {
   background-color: rgb(213, 213, 213);
   z-index: 5;
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
 }
@@ -61,7 +63,7 @@ main {
 .bg-color-equip {
   background-color: rgb(78, 78, 70);
   z-index: 5;
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
 }
@@ -69,7 +71,7 @@ main {
 .bg-color-yoga {
   background-color: rgb(154, 156, 140);
   z-index: 5;
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
 }
@@ -77,7 +79,7 @@ main {
 .bg-color-member {
   background-color: rgb(146, 137, 119);
   z-index: 5;
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
 }
@@ -227,7 +229,7 @@ main {
 
 /* TEXT PROPS*/
 h1 {
-  margin: -10px;
+  margin: -10px 0;
 }
 
 .h2-right,
@@ -305,6 +307,7 @@ input[type="submit"]:hover {
 .flex-column {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .flex-wrap {
@@ -698,7 +701,7 @@ footer {
   .parallax-1,
   .parallax-2,
   .parallax-3 {
-    width: 100vw;
+    width: 100%;
     min-height: 500px;
     margin-left: 0px;
   }
